HelloUltraviolet/Fixtures/RejectedSource/Parallelism/DispatchDependencyConflict/Expected.uv
//! Expected diagnostic metadata for the DispatchDependencyConflict rejected-source specimen.

expectedDiagnostic("E-CON-0142", "rule.20.Dispatch-Dependency-Err")
